update location of css and js

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Team 8 assigment</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' href='/dist/style/style.css'>
+    <link rel='stylesheet' href='./dist/style/style.css'>
     <head>
     </head>
     <body>
@@ -32,6 +32,6 @@
               </nav>
             </div>
           </header>
-          <link rel='stylesheet' href='/dist/js/script.js'>
+          <link rel='stylesheet' href='./dist/js/script.js'>
     </body>
 </html>
