--- a/index.html
+++ b/index.html
@@ -92,6 +92,98 @@
         </div>
       </div>
     </div>
+    <div class="travel-guide-container">
+      <div class="row">
+        <div class="col-7 pe-5">
+          <div class="head">
+            <div><span>ខេត្ត/តំបន់</span></div>
+          </div>
+          <div class="area d-flex">
+            <img src="images/Ankor_Wat_temple.jpg" alt="">
+            <div class="area-description">
+              <a class="area-title">សៀមរាប</a>
+              <p class="area-short-description">
+                អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
+                ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
+                ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
+              </p>
+            </div>
+          </div>
+          <div class="area d-flex">
+            <img src="images/Ankor_Wat_temple.jpg" alt="">
+            <div class="area-description">
+              <a class="area-title">សៀមរាប</a>
+              <p class="area-short-description">
+                អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
+                ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
+                ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
+              </p>
+            </div>
+          </div>
+          <div class="area d-flex">
+            <img src="images/Ankor_Wat_temple.jpg" alt="">
+            <div class="area-description">
+              <a class="area-title">សៀមរាប</a>
+              <p class="area-short-description">
+                អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
+                ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
+                ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
+              </p>
+            </div>
+          </div>
+          <div class="area d-flex">
+            <img src="images/Ankor_Wat_temple.jpg" alt="">
+            <div class="area-description">
+              <a class="area-title">សៀមរាប</a>
+              <p class="area-short-description">
+                អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
+                ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
+                ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-5">
+          <div class="popular-place-wrapper">
+            <div class="popular-title">
+              <span>អត្ថបទពេញនិយម</span>
+            </div>
+            <div class="popular-place d-flex">
+              <img src="images/sea.jpg" alt="">
+              <p class="place-decription">
+                កោះសង្សារ មានទីតាំងស្ថិតនៅ ភូមិ
+                ព្រែកស្វាយ សង្កាត់កោះរ៉ុង ក្រុងព្រះ
+                សីហនុ ខេត្តព្រះសីហនុ...
+              </p>
+            </div>
+            <div class="popular-place d-flex">
+              <img src="images/sea.jpg" alt="">
+              <p class="place-decription">
+                កោះសង្សារ មានទីតាំងស្ថិតនៅ ភូមិ
+                ព្រែកស្វាយ សង្កាត់កោះរ៉ុង ក្រុងព្រះ
+                សីហនុ ខេត្តព្រះសីហនុ...
+              </p>
+            </div>
+            <div class="popular-place d-flex">
+              <img src="images/sea.jpg" alt="">
+              <p class="place-decription">
+                កោះសង្សារ មានទីតាំងស្ថិតនៅ ភូមិ
+                ព្រែកស្វាយ សង្កាត់កោះរ៉ុង ក្រុងព្រះ
+                សីហនុ ខេត្តព្រះសីហនុ...
+              </p>
+            </div>
+            <div class="popular-place d-flex">
+              <img src="images/sea.jpg" alt="">
+              <p class="place-decription">
+                កោះសង្សារ មានទីតាំងស្ថិតនៅ ភូមិ
+                ព្រែកស្វាយ សង្កាត់កោះរ៉ុង ក្រុងព្រះ
+                សីហនុ ខេត្តព្រះសីហនុ...
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="dist/js/script.js"></script>
   </body>
 </html>
