--- a/index.html
+++ b/index.html
@@ -184,6 +184,150 @@
         </div>
       </div>
     </div>
+    <div class="top-3-place container">
+      <p class="top-3-place-title text-center my-5">
+        <span class="txt-top-place-title">កន្លែងពេញនិយមទាំង</span> <span class="num-top-place-title">៣</span>
+      </p>
+      <div class="row">
+        <div class="col-12 col-md-4">
+          <div class="card" style="width: 100%;">
+            <img src="images/kampi.jpg" class="card-img-top" alt="ព្រែកកាំពី">
+            <div class="card-body">
+              <p class="card-title text-center">ព្រែកកាំពី</p>
+              <p class="card-subtitle text-center">ខេត្តក្រចេះ</p>
+              <p class="card-description mt-3">
+                ជារមណីយដ្ឋានធម្មជាតិ ស្ថិតនៅលើដងទន្លេមេគង្គចម្ងាយ ១៦ គ.ម តាមផ្លូវលេខ៣៧៧ ខាងជើងទីរួមខេត្ត មានទីតាំងស្ថិតនៅភូមិក្បាលជួរ ឃុំសំបុក ស្រុកចិត្របុរី ខេត្តក្រចេះ។
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4">
+          <div class="card" style="width: 100%;">
+            <img src="images/kampi.jpg" class="card-img-top" alt="ព្រែកកាំពី">
+            <div class="card-body">
+              <p class="card-title text-center">ព្រែកកាំពី</p>
+              <p class="card-subtitle text-center">ខេត្តក្រចេះ</p>
+              <p class="card-description mt-3">
+                ជារមណីយដ្ឋានធម្មជាតិ ស្ថិតនៅលើដងទន្លេមេគង្គចម្ងាយ ១៦ គ.ម តាមផ្លូវលេខ៣៧៧ ខាងជើងទីរួមខេត្ត មានទីតាំងស្ថិតនៅភូមិក្បាលជួរ ឃុំសំបុក ស្រុកចិត្របុរី ខេត្តក្រចេះ។
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4">
+          <div class="card" style="width: 100%;">
+            <img src="images/kampi.jpg" class="card-img-top" alt="ព្រែកកាំពី">
+            <div class="card-body">
+              <p class="card-title text-center">ព្រែកកាំពី</p>
+              <p class="card-subtitle text-center">ខេត្តក្រចេះ</p>
+              <p class="card-description mt-3">
+                ជារមណីយដ្ឋានធម្មជាតិ ស្ថិតនៅលើដងទន្លេមេគង្គចម្ងាយ ១៦ គ.ម តាមផ្លូវលេខ៣៧៧ ខាងជើងទីរួមខេត្ត មានទីតាំងស្ថិតនៅភូមិក្បាលជួរ ឃុំសំបុក ស្រុកចិត្របុរី ខេត្តក្រចេះ។
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="country-food container">
+      <div class="header-title d-flex justify-content-between align-items-center w-100 mt-4">
+        <p class="left-title">មុខម្ហូបល្បីប្រចាំ ខេត្ត/ក្រុង</p>
+        <label class="right-show-more">
+          មើលបន្ថែម
+        </label>
+      </div>
+      <div class="list-foods row mt-4">
+        <div class="food col-12 col-md-4 col-lg-3">
+          <p class="food-in-province m-0 text-end">ព្រៃវែង</p>
+          <img src="images/food/kreak.png" alt="" class="food-img">
+          <p class="food-name m-0 text-center">សម្លគ្រាក់</p>
+        </div>
+        <div class="food col-12 col-md-4 col-lg-3">
+          <p class="food-in-province m-0 text-end">ព្រៃវែង</p>
+          <img src="images/food/kreak.png" alt="" class="food-img">
+          <p class="food-name m-0 text-center">សម្លគ្រាក់</p>
+        </div>
+        <div class="food col-12 col-md-4 col-lg-3">
+          <p class="food-in-province m-0 text-end">ព្រៃវែង</p>
+          <img src="images/food/kreak.png" alt="" class="food-img">
+          <p class="food-name m-0 text-center">សម្លគ្រាក់</p>
+        </div>
+        <div class="food col-12 col-md-4 col-lg-3">
+          <p class="food-in-province m-0 text-end">ព្រៃវែង</p>
+          <img src="images/food/kreak.png" alt="" class="food-img">
+          <p class="food-name m-0 text-center">សម្លគ្រាក់</p>
+        </div>
+        <div class="food col-12 col-md-4 col-lg-3">
+          <p class="food-in-province m-0 text-end">ព្រៃវែង</p>
+          <img src="images/food/kreak.png" alt="" class="food-img">
+          <p class="food-name m-0 text-center">សម្លគ្រាក់</p>
+        </div>
+        <div class="food col-12 col-md-4 col-lg-3">
+          <p class="food-in-province m-0 text-end">ព្រៃវែង</p>
+          <img src="images/food/kreak.png" alt="" class="food-img">
+          <p class="food-name m-0 text-center">សម្លគ្រាក់</p>
+        </div>
+        <div class="food col-12 col-md-4 col-lg-3">
+          <p class="food-in-province m-0 text-end">ព្រៃវែង</p>
+          <img src="images/food/kreak.png" alt="" class="food-img">
+          <p class="food-name m-0 text-center">សម្លគ្រាក់</p>
+        </div>
+        <div class="food col-12 col-md-4 col-lg-3">
+          <p class="food-in-province m-0 text-end">ព្រៃវែង</p>
+          <img src="images/food/kreak.png" alt="" class="food-img">
+          <p class="food-name m-0 text-center">សម្លគ្រាក់</p>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <div class="container">
+        <div class="footer-header d-flex justify-content-center align-items-center gap-4 py-4">
+          <span class="title-content cambodia">Cambodia</span>
+          <img src="images/home_banner.jpg" alt="banner" class="footer-banner">
+          <span class="title-content travel">Travel</span>
+        </div>
+        <div class="footer-detail row p-5">
+          <div class="col-12 col-md-6 left-side detail d-flex justify-content-center flex-column">
+            <div class="d-flex gap-3 mb-3">
+              <i class="fa-solid fa-map-location" style="width:80px !important;"></i>
+              <p class="m-0">Royal University of Phnom Penh (RUPP)
+                Russian Federation Boulevard, Toul Kork,
+                Phnom Penh, Cambodia</p>
+            </div>
+            <div class="d-flex gap-3 mb-3">
+              <i class="fa-solid fa-phone"></i>
+              <p class="m-0">(+855) 96 xxx xxxx</p>
+            </div>
+            <div class="d-flex gap-3">
+              <i class="fa-solid fa-envelope"></i>
+              <p class="m-0">leamlisophara@gmail.com</p>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 right-side detail">
+            <div class="open fw-bold footer-side-header"><i class="fa-solid fa-clock"></i>OPENING HOUR</div>
+            <div class="me-2 footer-descript">
+              <p>
+                Monday - Saturday: 08:00AM ~ 05:30PM
+              </p>
+              <p>
+                Sunday: Closed
+              </p>
+            </div>
+            <div class="follow-us fw-bold footer-side-header"><i class="fa-solid fa-broadcast-tower"></i>Follow Us</div>
+            <div class="social-media d-flex justify-content-center mt-3">
+              <div class="me-4"><a href="#"><i class="social-icon fa-brands fa-facebook"></i></a></div>
+              <div class="me-4"><a href="#"><i class="social-icon fa-brands fa-instagram"></i></a></div>
+              <div class="me-4"><a href="#"><i class="social-icon fa-brands fa-twitter"></i></a></div>
+              <div class="me-4"><a href="#"><i class="social-icon fa-brands fa-telegram"></i></a></div>
+              <div class="me-4"><a href="#"><i class="social-icon fa-brands fa-youtube"></i></a></div>
+              <div class="me-4"><a href="#"><i class="social-icon fa-brands fa-tiktok"></i></a></div>
+            </div>
+          </div>
+        </div>
+        <div class="footer-footer d-flex justify-content-between align-items-center py-4">
+          <span class="footer-footer-left d-flex align-items-center"><i class="fa-regular fa-copyright me-2"></i>Copyright <a href="#" class="footer-footer-link ms-1">Cambodia Travel</a></span>
+          <span class="footer-footer-right"><i class="fa-regular fa-copyright"></i>Designed by Niset RUPP - G5, E8, Y4 Generation 23rd</span>
+        </div>
+      </div>
+    </footer>
     <script src="dist/js/script.js"></script>
   </body>
 </html>
