--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
           <p class="description">វិស័យទេសចរណ៍នៅកម្ពុជា គឺជាវិស័យដល់សំខាន់បំផុតនៅក្នុងសេដ្ឋកិច្ច របស់កម្ពុជានៅក្នុងឆ្នាំ២០១៣ ការមកដល់ទេសចរណ៍កើនឡើងដល់ ១៧.៥% ពីមួយឆ្នាំទៅមួយឆ្នាំដោយអ្នកធ្វើដំណើរអាជីវកម្មកើនឡើង ៤៧% .....</p>
           <div class="btn-wrapper d-flex mt-3">
             <div class="btn-detail read-more">
-              <i class="fa-solid fa-book"></i>
-              <span>អានបន្ថែម</span>
+              <a href="readmore.html"><i class="fa-solid fa-book"></i>
+              <span>អានបន្ថែម</span></a>
             </div>
             <div class="btn-detail watch-video">
               <i class="fa-brands fa-youtube"></i>
