Update on Read more

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <nav id="menu-navbar">
       <div id="navbar-content-wrapper">
         <div id="right-side-menu" class="d-flex justify-content-between align-items-center">
-          <a href="" id="home">
+          <a href="index.html" id="home">
             <i class="fa-solid fa-house-chimney"></i>
           </a>
           <ul class="menu-list">
