--- a/readmore.html
+++ b/readmore.html
@@ -69,8 +69,28 @@
         </div>
       </div>
     </nav>
-
-   
+<!--Content Post-->
+   <div class="content-post container">
+    <div class="row"> <!--Display flix-->
+      <div class="col-lg-9">
+        <div class="description-1">
+          <p class="title-content-post pt-2">ដំណើរកម្សាន្តនៅកម្ពុជា</p>
+          <img class="img-content-post" src="./images/870x410.png">
+            <p class="text-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi repudiandae, quis, maiores in deleniti rerum voluptatum totam optio laboriosam, explicabo vero distinctio? Aliquam, distinctio? Quaerat cumque illum odit quasi? Earum.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus voluptas, minima possimus dignissimos pariatur repellendus dolore voluptatibus, quae quas illum blanditiis impedit delectus consequatur soluta. Explicabo iste esse hic suscipit.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi amet dicta omnis ab! Vero reprehenderit deleniti optio consequatur, laudantium porro, necessitatibus, in laborum enim sed quo asperiores maiores assumenda voluptates?
+            </p>
+          </div>
+      </div>
+      <div class="col-lg-3">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis incidunt qui, accusantium nobis ut a dolorum totam, sint accusamus doloremque nesciunt explicabo natus doloribus nulla. Libero praesentium eos est ducimus!
+        </p>
+      </div>
+    </div>
+    
+   </div>
     <script src="dist/js/script.js"></script>
   </body>
 </html>
