--- a/readmore.html
+++ b/readmore.html
@@ -14,26 +14,21 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="dist/fontawesome-free-6.2.0-web/css/all.css">
     <link rel="stylesheet" href="dist/fontawesome-free-6.2.0-web/css/fontawesome.min.css">
-
     <!-- Bootstrap -->
     <link rel="stylesheet" href="dist/bootstrap-5.2.1-dist/css/bootstrap.min.css">
-
     <!-- Style -->
     <link rel='stylesheet' href='./dist/style/style.css'>
-     
     <!-- <div class="se-pre-con"></div> -->
     <head>
   </head>
   <body>
-    <div class="preloader_wrapper">
-      <div class="preloader_inner">
-        <img src="images/preloader.gif" alt="image" />
-      </div>
+    <div class="preloader">
+      <div class="preloader_wrapper"></div>
     </div>
     <nav id="menu-navbar">
       <div id="navbar-content-wrapper">
         <div id="right-side-menu" class="d-flex justify-content-between align-items-center">
-          <a href="" id="home">
+          <a href="index.html" id="home">
             <i class="fa-solid fa-house-chimney"></i>
           </a>
           <ul class="menu-list">
