--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
         </div>
       </div>
     </div>
+      <div class="scroll_down">
+        <span class="scroll_span"></span>
+        <p>scroll down</p>
+      </div>
     <div class="travel-guide-container">
       <div class="row">
         <div class="col-7 pe-5">
