update some content

--- a/readmore.html
+++ b/readmore.html
@@ -83,9 +83,19 @@
             </div>
           </div>
             <p class="text-description">ប្រទេសកម្ពុជា គឺ ជាប្រទេសមួយដែលមានវប្បធម៏ និង អរិយធម៏ចាស់ជាងគេក្នុងទ្វីបអាស៊ីអាគ្នេយ៍។</p>
-            <p class="text-description">ណាហ្គាវើលមានទីតាំងស្ថិតនៅក្នុងតំបន់ជិតមាត់ទន្លេនៃរាជធានីភ្នំពេញ ហើយក៏ស្ថិតនៅជិតទីតាំងបេតិកភណ្ឌវប្បធម៌ដ៏សម្បូរបែបជាច្រើន ដោយធ្វើដំណើរដោយរ៉ឺម៉ក ឬដោយតាក់ស៊ី។ ប្រាសាទ វិមាន ព្រះបរមរាជវាំង ផ្សារ មជ្ឈមណ្ឌលសិល្បៈ និងកន្លែងជាច្រើនទៀតមានទីតាំងស្ថិតនៅជិតទីតាំងរបស់ណាហ្គាវើល។</p>
-            <p class="text-description">ក្រុមការងារដែលមានបទពិសោធន៍ និងជំនាញវិជ្ជាជីវៈរបស់យើងខ្ញុំនៅទីនេះដើម្បីជួយអ្នកក្នុងការរៀបចំដំណើរទេសចរណ៍បែបឯកជន ព្រមទាំងអាចណែនាំអ្នកពីកន្លែងដែល “”ត្រូវទៅទស្សនា”” ខណៈពេលអ្នកកំពុងស្នាក់នៅជាមួយយើង។ ក្រៅពីវប្បធម៍ដ៏សម្បូរបែប ភ្ញៀវទេសចររបស់ណាហ្គាវើលនឹងរីករាយជាមួយការពិសាម្ហូបអាហារ ការដើរទិញអីវ៉ាន់ ការកម្សាន្ត ដែលមានស្រាប់នៅក្នុងទីតាំងរបស់យើងខ្ញុំ។</p>
-            <p class="text-description">យើងខ្ញុំមានសេចក្តីរំភើបដែលអ្នកបានជ្រើសយកយើងខ្ញុំជាគោលដៅរមណីយដ្ឋានរបស់អ្នក ស្របពេលជាមួយវត្តមានរបស់អ្នកនៅក្នុងរាជធានីភ្នំពេញ – ក្រុមការងាររបស់យើងខ្ញុំសូមស្វាគមន៍អ្នកមកកាន់ប្រទេសកម្ពុជា “ព្រះរាជាណាចក្រអច្ឆរិយៈ”។</p>
+            <p class="text-description">ទោះបីជាប្រទេសកម្ពុជា មានប្រវត្តិស្ថិតនៅក្រោមអាណានិគមន៍នៃប្រទេសមួយចំនួន និង មានសង្រ្គាមស៊ីវិលអស់ជាច្រើនឆ្នាំក៏ដោយ តែបច្ចុប្បន្ននេះ កម្ពុជាមានសុខសន្តិភាពពេញបរិបូរណ៍ ប្រជាពលរដ្ឋ និង ភ្ញៀវទេសចរអន្តរជាតិ អាចធ្វើតំណើរកម្សាន្តបានគ្រប់ទីកន្លែង ជាមួយនិង ហេដ្ឋារចនាសម្ព័ន្ធ ដ៏ ស្រស់ស្អាត តំបន់ទេសចរណ៍ដ៏សម្បូរបែប ទាំងតំបន់ទេសចរណ៍ធម្មជាតិ តំបន់ទេសចរណ៍វប្បធម៏ និង តំបន់ទេសចរណ៍កែច្នៃរាប់រយកន្លែង</p>
+            <p class="text-description">ចំណុចដ៏មានសក្តានុពលទាំងអស់ខាងលើនេះហើយ ដែលជំរុញឱ្យវិស័យទេសចរណ៍ បានដើរតួនាទីយ៉ាងសំខាន់ សម្រាប់សេដ្ឋកិច្ចកម្ពុជា ដើម្បីចូលរួមក្នុងការអភិវឌ្ឍន៍សេដ្ឋកិច្ចកម្ពុជា ដើម្បីចូលរួមចំណែកក្នុង ការអភិវឌ្ឍន៍សេដ្ឋកិច្ចកម្ពុជា ប្រជាពលក្នុងប្រទេសកម្ពុជាគួរបង្វែរចាប់អារម្មណ៍អំពីការធ្វើដំណើរកម្សាន្តទៅក្រៅប្រទេស មកធ្វើដំណើរកម្សាន្ត ក្នុងស្រុក ដែលចំណាយអស់តិច និង អាចជួយសេដ្ឋកិច្ចកម្ពុជាបានយ៉ាយច្រើន តាមរយៈការបង់សេវាកម្សាន្ត ជួយផ្តល់ការងារសម្រា ប់ប្រជាពលរដ្ឋមូលដ្ឋាន (លក់អាហារ លក់វត្ថុអនុស្សវរីយ៍សម្រាប់តំបន់ ។ល។)</p>
+            <p class="text-description">និង ជួយក្នុងការប្រើប្រាស់សេវាផ្សេងៗរបស់រដ្ឋ។ យើងងាកមកមើលអំពីវិស័យទេសចរណ៍នៅក្នុងប្រទេសកម្ពុជាយើងវិញ ឃើញថាប្រទេសមួយនេះពិតជាមានធនធានធម្មជាតិ និង មានសម្បត្តិបេតិកភ័ណ្ឌជាតិជាច្រើន ដែលអាចទាក់ទាញភ្ញៀវជាតិ និង អន្តរជាតិឱ្យចូលទស្សនាឥតគណនា។</p>
+            <p class="text-title-readmore">​រាជធានីភ្នំពេញ</p>
+            <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
+            <p class="text-description">មានទីតាំងស្ថិតនៅតាមបណ្តោយព្រះមហាវិថីសុធារស សាងសង់ឡើងនៅឆ្នាំ ១៨៦៦ នៅក្នុងរាជកាល ព្រះបាទនរោត្តម​។​</p>
+            <p class="text-description">នៅក្នុងព្រះបរមរាជវាំងមាន៖ </br>-ប្រាសាទទេវាវិនិច្ច័យ ជាកន្លែងដែលសម្រាប់ព្រះមហាក្សត្រឡើងគ្រងរាជ្យ </br>-ប្រាសាទខេមរិន្ទ ជាកន្លែងដែលព្រះមហាក្សត្រ និង អគ្គមហេសីគង់នៅ​​​</br>​-ប្រាសាទសំរានភិរម្យ ជាកន្លែងដែលព្រះមហាក្សត្រឡើងគ្រងរាជ្យ </br>-ហោរបាគូ ឬ ហោរព្រះខ័នជាកន្លែងទុកដាក់វត្ថុសម្រាប់សោយរាជ្យ</br>​-ច័ន្ទឆាយា ជាកន្លែងដែលគេហាត់រាំ របាំព្រះរាជ្យទ្រព្យ និង របាំថ្វាយព្រះមហាក្សត្រ ព្រះញ្ញាតិវង្សានុវង្ស និង ពួកមន្រ្តីជាន់ខ្ពស់ ។</p>
+            <p class="text-title-readmore">តាមបណ្ដាលខេត្តក្រុង</p>
+            <p class="text-description"> - ខេត្តសៀមរាបអង្គរវត្ត​</p>
+            <img class="img-content-post" src="./images/readme-pic.jpg">
+            <p class="text-description">មានទីតាំងស្ថិតនៅតាមបណ្តោយព្រះមហាវិថីសុធារស សាងសង់ឡើងនៅឆ្នាំ ១៨៦៦ នៅក្នុងរាជកាល ព្រះបាទនរោត្តម​។​</p>
+            <p class="text-description">មានទីតាំងស្ថិតនៅតាមបណ្តោយព្រះមហាវិថីសុធារស សាងសង់ឡើងនៅឆ្នាំ ១៨៦៦ នៅក្នុងរាជកាល ព្រះបាទនរោត្តម​។​</p>
+
         </div>
       </div>
       <div class="col-lg-3">
@@ -97,6 +107,57 @@
       </div>
     </div>
   </div>
+  <footer>
+    <div class="container">
+      <div class="footer-header d-flex justify-content-center align-items-center gap-4 py-4">
+        <span class="title-content cambodia">Cambodia</span>
+        <img src="images/home_banner.jpg" alt="banner" class="footer-banner">
+        <span class="title-content travel">Travel</span>
+      </div>
+      <div class="footer-detail row p-5">
+        <div class="col-12 col-md-6 left-side detail d-flex justify-content-center flex-column">
+          <div class="d-flex gap-3 mb-3">
+            <i class="fa-solid fa-map-location" style="width:80px !important;"></i>
+            <p class="m-0">Royal University of Phnom Penh (RUPP)
+              Russian Federation Boulevard, Toul Kork,
+              Phnom Penh, Cambodia</p>
+          </div>
+          <div class="d-flex gap-3 mb-3">
+            <i class="fa-solid fa-phone"></i>
+            <p class="m-0">(+855) 96 xxx xxxx</p>
+          </div>
+          <div class="d-flex gap-3">
+            <i class="fa-solid fa-envelope"></i>
+            <p class="m-0">leamlisophara@gmail.com</p>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 right-side detail">
+          <div class="open fw-bold footer-side-header"><i class="fa-solid fa-clock"></i>OPENING HOUR</div>
+          <div class="me-2 footer-descript">
+            <p>
+              Monday - Saturday: 08:00AM ~ 05:30PM
+            </p>
+            <p>
+              Sunday: Closed
+            </p>
+          </div>
+          <div class="follow-us fw-bold footer-side-header"><i class="fa-solid fa-broadcast-tower"></i>Follow Us</div>
+          <div class="social-media d-flex justify-content-center mt-3">
+            <div class="me-4"><a href="#"><i class="social-icon fa-brands fa-facebook"></i></a></div>
+            <div class="me-4"><a href="#"><i class="social-icon fa-brands fa-instagram"></i></a></div>
+            <div class="me-4"><a href="#"><i class="social-icon fa-brands fa-twitter"></i></a></div>
+            <div class="me-4"><a href="#"><i class="social-icon fa-brands fa-telegram"></i></a></div>
+            <div class="me-4"><a href="#"><i class="social-icon fa-brands fa-youtube"></i></a></div>
+            <div class="me-4"><a href="#"><i class="social-icon fa-brands fa-tiktok"></i></a></div>
+          </div>
+        </div>
+      </div>
+      <div class="footer-footer d-flex justify-content-between align-items-center py-4">
+        <span class="footer-footer-left d-flex align-items-center"><i class="fa-regular fa-copyright me-2"></i>Copyright <a href="#" class="footer-footer-link ms-1">Cambodia Travel</a></span>
+        <span class="footer-footer-right"><i class="fa-regular fa-copyright"></i>Designed by Niset RUPP - G5, E8, Y4 Generation 23rd</span>
+      </div>
+    </div>
+  </footer>
     <script src="dist/js/script.js"></script>
   </body>
 </html>
