--- a/readmore.html
+++ b/readmore.html
@@ -89,21 +89,29 @@
             <p class="text-title-readmore">​រាជធានីភ្នំពេញ</p>
             <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
             <p class="text-description">មានទីតាំងស្ថិតនៅតាមបណ្តោយព្រះមហាវិថីសុធារស សាងសង់ឡើងនៅឆ្នាំ ១៨៦៦ នៅក្នុងរាជកាល ព្រះបាទនរោត្តម​។​</p>
-            <p class="text-description">នៅក្នុងព្រះបរមរាជវាំងមាន៖ </br>-ប្រាសាទទេវាវិនិច្ច័យ ជាកន្លែងដែលសម្រាប់ព្រះមហាក្សត្រឡើងគ្រងរាជ្យ </br>-ប្រាសាទខេមរិន្ទ ជាកន្លែងដែលព្រះមហាក្សត្រ និង អគ្គមហេសីគង់នៅ​​​</br>​-ប្រាសាទសំរានភិរម្យ ជាកន្លែងដែលព្រះមហាក្សត្រឡើងគ្រងរាជ្យ </br>-ហោរបាគូ ឬ ហោរព្រះខ័នជាកន្លែងទុកដាក់វត្ថុសម្រាប់សោយរាជ្យ</br>​-ច័ន្ទឆាយា ជាកន្លែងដែលគេហាត់រាំ របាំព្រះរាជ្យទ្រព្យ និង របាំថ្វាយព្រះមហាក្សត្រ ព្រះញ្ញាតិវង្សានុវង្ស និង ពួកមន្រ្តីជាន់ខ្ពស់ ។</p>
+            <p class="text-description">នៅក្នុងព្រះបរមរាជវាំងមាន៖ </br> - ប្រាសាទទេវាវិនិច្ច័យ ជាកន្លែងដែលសម្រាប់ព្រះមហាក្សត្រឡើងគ្រងរាជ្យ </br> - ប្រាសាទខេមរិន្ទ ជាកន្លែងដែលព្រះមហាក្សត្រ និង អគ្គមហេសីគង់នៅ​​​</br> - ប្រាសាទសំរានភិរម្យ ជាកន្លែងដែលព្រះមហាក្សត្រឡើងគ្រងរាជ្យ </br> - ហោរបាគូ ឬ ហោរព្រះខ័នជាកន្លែងទុកដាក់វត្ថុសម្រាប់សោយរាជ្យ</br> - ច័ន្ទឆាយា ជាកន្លែងដែលគេហាត់រាំ របាំព្រះរាជ្យទ្រព្យ និង របាំថ្វាយព្រះមហាក្សត្រ ព្រះញ្ញាតិវង្សានុវង្ស និង ពួកមន្រ្តីជាន់ខ្ពស់ ។</p>
             <p class="text-title-readmore">តាមបណ្ដាលខេត្តក្រុង</p>
             <p class="text-description"> - ខេត្តសៀមរាបអង្គរវត្ត​</p>
-            <img class="img-content-post" src="./images/readme-pic.jpg">
-            <p class="text-description">មានទីតាំងស្ថិតនៅតាមបណ្តោយព្រះមហាវិថីសុធារស សាងសង់ឡើងនៅឆ្នាំ ១៨៦៦ នៅក្នុងរាជកាល ព្រះបាទនរោត្តម​។​</p>
-            <p class="text-description">មានទីតាំងស្ថិតនៅតាមបណ្តោយព្រះមហាវិថីសុធារស សាងសង់ឡើងនៅឆ្នាំ ១៨៦៦ នៅក្នុងរាជកាល ព្រះបាទនរោត្តម​។​</p>
-
+            <img class="img-content-post" src="./images/ខេត្តសៀមរាប.jpeg">
+            <p class="text-description">មណីដ្ឋាននេះមានភ្ញៀវជាតិ និង អន្តរជាតិចូលមកទស្សនាកម្សាន្តយ៉ាងច្រើន កុះករដើម្បី បានដឹង ទីកេរណ៍ដំណែលនៃមរតករបស់បុព្វបុរសជំនាន់ដើមដែលបានបន្សល់ទុក។​</p>
+            <p class="text-description"> - ប្រាសាទព្រះវិហារ (ខេត្តព្រះវិហារ)</p>
+            <img class="img-content-post" src="./images/ប្រាសាទព្រះវិហារ.jpeg">
+            <p class="text-description">ប្រាសាទព្រះវិហារ មានទីតាំងស្ថិតនៅលើជួរភ្នំដងរ៉ែក ជាប់ព្រំប្រទល់ប្រទេសថៃ និងមានចម្ងាយ​ ១០៨ ម៉ែត្រពីទីរួមខេត្តព្រះវិហារ​ ក្នុងភូមិ ស្វាយជ្រុំ ឃុំកន្ទូត ស្រុកជាំក្សាន្ត ខេត្តព្រះវិហារ។</p>
+            <p class="text-description"> - កំពង់សោម(ខេត្តព្រះសីហនុ)</p>
+            <img class="img-content-post" src="./images/កំពង់សោម.jpeg">
+            <p class="text-description">កំពង់សោម ជាកន្លែងសម្រាកលំហែកាយ និងកម្សាន្តដ៏មានប្រជាប្រិយភាពរបស់កម្ពុជាទាំងភ្ញៀវជាតិនិង អន្តរជាតិ ដែលមានទេសភាពខៀវស្រងាត់ អមដោយកោះ តូចធំជាច្រើន នៅជាប់នឹង ផ្ទៃសមុទ្រពណ៌ខៀវដ៏ធំល្វឹងល្វើយ ។</p>
+            <img class="img-content-post" src="./images/តាតៃ.jpeg">
+            <p class="text-description"> - តាតៃ​(ខេត្ត​ កោះកុង)</p>
+            <p class="text-description">រមណីដ្ឋាន​ តាតៃ កំពុងតែមានភាពភាពពេញនិយមពីភ្ញៀវជាតិនឹង អន្តរជាតិ ទៅទស្សនាកម្សាន្តនៅក្នុងពេលសម្រាកកាយរបស់ពួកគេ។​ វាមិនត្រឹមតែបានផ្តល់នូវភាពរីករាយប់ុណ្ណោះទេ ហើយវាបានធ្វើឲភ្ញៀវទេសចរណ៍ជាប់ចិត្ត និង ចងចាំទុកក្នុងចិត្តមិនអាចបំភ្លេចបាន។</p>
         </div>
       </div>
       <div class="col-lg-3">
-          <img src="./images/k_profile.jpg" alt="center" class="side-bar-profile">
+        <div class="calendar"></div>
+          <!-- <img src="./images/k_profile.jpg" alt="center" class="side-bar-profile">
         <p class="side-bar-title">Kimnang</p>
         <p class="side-bar-readme">
           This page power by me.
-        </p>
+        </p> -->
       </div>
     </div>
   </div>
