--- a/index.html
+++ b/index.html
@@ -34,16 +34,32 @@
               ខេត្ត/តំបន់
               <div class="sub-menu-dropdown">
                 <ul>
-                  <li>សណ្ឋាគារ</li>
+                  <li>ភ្នំពេញ</li>
                   <li>បាត់ដំបង</li>
-                  <li>រថយន្តក្រុង</li>
-                  <li>ជើងហោះហើរ</li>
-                  <li>អាហារ</li>
-                  <li>សណ្ឋាគារ</li>
-                  <li>រថយន្ត</li>
-                  <li>រថយន្តក្រុង</li>
-                  <li>ជើងហោះហើរ</li>
-                  <li>អាហារ</li>
+                  <li>សៀមរាប</li>
+                  <li>ពោធិ៍សាត់</li>
+                  <li>ព្រៃវែង</li>
+                  <li>ស្វាយរៀង</li>
+                  <li>កំពង់ឆ្នាំង</li>
+                  <li>កំពត</li>
+                  <li>កំពង់ធំ</li>
+                  <li>តាកែវ</li>
+                  <li>មណ្ឌលគិរី</li>
+                  <li>រតនៈគិរី</li>
+                  <li>ឧត្ដមានជ័យ</li>
+                  <li>កែប</li>
+                  <li>ស្ទឹងត្រែង</li>
+                  <li>ព្រះវិហារ</li>
+                  <li>កោះកុង</li>
+                  <li>ព្រះសីហនុ</li>
+                  <li>កំពង់ស្ពឺ</li>
+                  <li>កំពង់ចាម</li> 
+                  <li>បន្ទាយមានជ័យ</li>
+                  <li>កណ្ដាល</li>
+                  <li>ក្រចេះ</li>
+                  <li>ប៉ៃលិន</li>
+                  <li>ត្បូងឃ្មុំ</li>
+                  <li>ស្វាយ</li>
                 </ul>
               </div>
             </li>
