--- a/index.html
+++ b/index.html
@@ -130,13 +130,11 @@
             </div>
           </div>
           <div class="area d-flex">
-            <img src="images/Ankor_Wat_temple.jpg" alt="">
+            <img src="images/Cambodia/កំពង់ឆ្នាំង.jpg" alt="">
             <div class="area-description">
-              <a class="area-title">សៀមរាប</a>
+              <a class="area-title">កំពង់ឆ្នាំង</a>
               <p class="area-short-description">
-                អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
-                ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
-                ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
+                ជាខេត្តមួយស្ថិតនៅភាគកណ្តាលនៃប្រទេសកម្ពុជា។ ខេត្តកំពង់ឆ្នាំងជាខេត្តល្បីខាងផលិតក្អមឆ្នាំងមានគុណភាពល្អអំពីដី។ខេត្តជិតខាងគឺ(ពីខាងជើងតាមទ្រនិចនាឡិកាវិល)កំពង់ធំកំពង់ចាមកណ្ដាល កំពង់ស្ពឺ និង ពោធិ៍សាត់។ក្រុងទីរួមខេត្តកំពង់ឆ្នាំងគឺក្រុងកំពង់ឆ្នាំង។
               </p>
             </div>
           </div>
