--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <!-- Style -->
     <link rel='stylesheet' href='./dist/style/style.css'>
+    
     <head>
   </head>
   <body>
@@ -134,7 +135,9 @@
             <div class="area-description">
               <a class="area-title">កំពង់ឆ្នាំង</a>
               <p class="area-short-description">
-                ជាខេត្តមួយស្ថិតនៅភាគកណ្តាលនៃប្រទេសកម្ពុជា។ ខេត្តកំពង់ឆ្នាំងជាខេត្តល្បីខាងផលិតក្អមឆ្នាំងមានគុណភាពល្អអំពីដី។ខេត្តជិតខាងគឺ(ពីខាងជើងតាមទ្រនិចនាឡិកាវិល)កំពង់ធំកំពង់ចាមកណ្ដាល កំពង់ស្ពឺ និង ពោធិ៍សាត់។ក្រុងទីរួមខេត្តកំពង់ឆ្នាំងគឺក្រុងកំពង់ឆ្នាំង។
+                ជាខេត្តមួយស្ថិតនៅភាគកណ្តាលនៃប្រទេសកម្ពុជា។ 
+                ខេត្តកំពង់ឆ្នាំងជាខេត្តល្បីខាងផលិតក្អមឆ្នាំងមានគុណភាពល្អអំពីដី។
+                ខេត្តជិតខាងគឺ(ពីខាងជើងតាមទ្រនិចនាឡិកាវិល)កំពង់ធំកំពង់ចាមកណ្ដាល...
               </p>
             </div>
           </div>
@@ -143,7 +146,9 @@
             <div class="area-description">
               <a class="area-title">កំពត</a>
               <p class="area-short-description">
-                កំពតគឺជាទីរួមរដ្ឋបាលនៃខេត្តកំពតត្រូវបានប្តូរឈ្មោះពីស្រុកកំពង់បាយតាមអនុក្រឹត្យលេខ​ ២២១ អនក្រ.បក នៅខែតុលា ២០០៨ មានផ្ទៃដីចំនួន៥៤០០ហិចតា។ ក្រុងនេះស្ថិតនៅតាមដងព្រែកទឹកឈូ និងមានចម្ងាយ ៥ គ.មពីឈូងសមុទ្រថៃ។ នៅទីនោះមានកន្លែងកំសាន្តច្រើនណាស់ ដូចជា ការទស្សនាអាគារចាស់ៗ រមណីដ្ខាន ដូចជាភ្នំបូកគោ រមណីយទឹកឈូ វារីអគ្គីសនីភ្នំកំចាយ ឆ្នេរព្រៃក្រុងកំពត និងកន្លែងដែលមានទឹកធ្លាក់ជាច្រើនក្នុងក្រុងកំពត។
+                កំពតគឺជាទីរួមរដ្ឋបាលនៃខេត្តកំពតត្រូវបានប្តូរឈ្មោះពីស្រុកកំពង់បាយ
+                តាមអនុក្រឹត្យលេខ​ ២២១ អនក្រ.បក នៅខែតុលា ២០០៨ មានផ្ទៃដីចំនួន៥៤០០ហិចតា។ 
+                ក្រុងនេះស្ថិតនៅតាមដងព្រែកទឹកឈូ និងមានចម្ងាយ ៥ គ.មពីឈូងសមុទ្រថៃ។ ...
               </p>
             </div>
           </div>
@@ -152,7 +157,9 @@
             <div class="area-description">
               <a class="area-title">បាត់ដំបង</a>
               <p class="area-short-description">
-                គឺជាខេត្តមួយនៅភាគពាយ័ព្យនៃព្រះរាជាណាចក្រកម្ពុជា។ខេត្តបាត់ដំបងមានទីប្រជុំជនធំនៅក្រុងបាត់ដំបង។ខេត្តបាត់ដំបងមានព្រំប្រទល់ខាងជើងជាប់ខេត្តបន្ទាយមានជ័យខាងកើតជាប់ខេត្តសៀមរាបនិងបឹងទន្លេសាបខាងត្បូងជាប់ខេត្តពោធិ៍សាត់ខាងលិចជាប់ខេត្តប៉ៃលិននិងខេត្តច័ន្ទបុរី(ប្រទេសថៃ)។
+                គឺជាខេត្តមួយនៅភាគពាយ័ព្យនៃព្រះរាជាណាចក្រកម្ពុជា។ខេត្តបាត់ដំបង
+                មានទីប្រជុំជនធំនៅក្រុងបាត់ដំបង។ខេត្តបាត់ដំបងមានព្រំប្រទល់ខាងជើង
+                ជាប់ខេត្តបន្ទាយមានជ័យខាងកើតជាប់ខេត្តសៀមរាបនិងបឹងទន្លេសាបខាងត្បូង...
               </p>
             </div>
           </div>
